<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.homegadgetry.myappportfolio.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textViewMainHeader"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/main_header"
        android:textColor="@color/udacityDarkButton"
        android:textStyle="bold"
        android:textSize="20sp" />

    <Button
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:text="@string/popular_movies"
        android:id="@+id/buttonPopularMovies"
        android:textColor="@android:color/white"
        android:background="@color/udacityDarkButton"
        android:layout_below="@+id/textViewMainHeader"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/button_margin"
        android:layout_marginBottom="@dimen/button_margin" />

    <Button
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:text="@string/stock_hawk"
        android:id="@+id/buttonStockHawk"
        android:layout_below="@+id/buttonPopularMovies"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/white"
        android:background="@color/udacityDarkButton"
        android:layout_marginTop="@dimen/button_margin"
        android:layout_marginBottom="@dimen/button_margin" />

    <Button
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:text="@string/build_it_bigger"
        android:id="@+id/buttonBuildItBigger"
        android:layout_below="@+id/buttonStockHawk"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/white"
        android:background="@color/udacityDarkButton"
        android:layout_marginTop="@dimen/button_margin"
        android:layout_marginBottom="@dimen/button_margin" />

    <Button
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:text="@string/make_your_app_material"
        android:id="@+id/buttonMakeAppMaterial"
        android:layout_below="@+id/buttonBuildItBigger"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/white"
        android:background="@color/udacityDarkButton"
        android:layout_marginTop="@dimen/button_margin"
        android:layout_marginBottom="@dimen/button_margin"
        android:layout_alignParentEnd="false"
        android:layout_alignParentStart="false" />

    <Button
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:text="@string/go_ubiquitous"
        android:id="@+id/buttonGoUbiquitous"
        android:layout_below="@+id/buttonMakeAppMaterial"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/white"
        android:background="@color/udacityDarkButton"
        android:layout_marginTop="@dimen/button_margin"
        android:layout_marginBottom="@dimen/button_margin" />

    <Button
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:text="@string/capstone"
        android:id="@+id/buttonCapstone"
        android:layout_below="@+id/buttonGoUbiquitous"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/white"
        android:background="@color/udacityDarkButton"
        android:layout_marginTop="@dimen/button_margin"
        android:layout_marginBottom="@dimen/button_margin" />

</RelativeLayout>
